# pingpal

./: .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  railway.toml
.beads/: .gitignore  metadata.json
.github/workflows/: claude-pr-review.yml
src/pingpal/: __init__.py  agent.py  config.py  main.py
src/pingpal/api/: webhook.py
src/pingpal/db/: store.py
src/pingpal/services/: messenger_client.py  messenger_verifier.py
tests/: test_agent.py  test_messenger_client.py  test_webhook.py
