[build-system]
requires = []
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "pingpal"
version = "0.1.0"
description = "Messenger group chat agent backend scaffold"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
