[build-system]
requires = []
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "pingpal"
version = "0.1.0"
description = "Messenger group chat agent backend scaffold"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "anthropic>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "respx>=0.21",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
